# Homeworks10

Task2/: CMakeLists.txt
Task2/source/: EquilateraltTriangle.cpp  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  Parallelogram.cpp  Quadrilateral.cpp  Rectangle.cpp  Rhomb.cpp  RightTriangle.cpp  Square.cpp  Triangle.cpp
